# smart-home

./: .cursorrules  .gitignore  ANALYTICS_DASHBOARD_GUIDE.md  ANALYTICS_SUMMARY.md  AWS_CONFIGURATION_JUSTIFICATION.md  BACKEND_API_FIXES.md  Cursor - Design Document.docx  DEMO_USERS.md  DEV_WORKFLOW.md  Fix YAMNet Pipeline Alerts.md  GOOGLE_UI_REDESIGN.md  MONGODB_EVENTS_GUIDE.md  ModifiedFiles.md  PRESENTATION_CONTENT.md  PRESENTATION_SCRIPT.md  README.md  SMTP_CONFIGURATION.md  Smart Home Cloud Platform - Design Dcocument.docx  TESTING_REPORT.md  api_test_complete.sh  docker-compose.backend.yml  docker-compose.local.yml  push_images.sh  quick-start.sh  setup-local.sh  test_all_apis.sh  test_comprehensive.sh  test_final.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  deps.py  main.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/routers/: admin.py  alerts.py  assignments.py  auth.py  device_config.py  devices.py  ingest.py  models_cfg.py  network.py  ops.py  owner.py  profile.py  settings.py  tech.py  users.py  ws.py
backend/app/schemas/: alerts.py  analytics.py  auth.py  device_config.py  devices.py  homes.py  ingest.py  installation_requests.py  models_cfg.py  profile.py  rooms.py  settings.py  users.py
backend/migrations/: env.py
backend/scripts/: seed_data.py  seed_mongo_events.py  seed_network_telemetry.py  seed_users.py
backend/worker/: __init__.py  main.py  model_runner.py  sqs_loop.py
(+139 files in other folders)
