[project]
name = "smart-home-backend"
version = "0.1.0"
description = "Smart Home Cloud Platform - FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
    "pymongo>=4.6.0",
    "boto3>=1.29.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
    "tensorflow>=2.15.0",
    "tensorflow-hub>=0.16.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

